# LeadManager4U

./: .gitignore  .replit  README.md  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  manage.py  pyproject.toml  replit.md  replit.nix  requirements.txt
.agents/memory/: MEMORY.md  global-settings-forms.md  search-provider-compatibility.md
attached_assets/: Pasted--MULTI-SEARCH-ENGINE-SUPPORT-Do-not-build-the-scraping-_1784735977157.txt  Pasted-I-have-an-existing-Django-lead-generation-app-that-scra_1784738190186.txt  Pasted-i-want-u-to-first-go-through-overall-app-and-make-some-_1784755431420.txt  Pasted-in-https-9d7b1438-c770-462b-9f79-3866729ee9dd-00-3t24gv_1784802186025.txt  Pasted-nice-one-more-thing-follow-up-must-be-like-today-follow_1784757471090.txt  Pasted-now-it-is-showing-it-Test-email-sent-to-gmail-com-via-t_1784830831487.txt  Pasted-now-it-said-succes-on-test-email-on-local-run-at-127-0-_1784836533751.txt  Pasted-one-last-thing-is-bing-map-using-microsoft-bing-map-rig_1784815981486.txt  Pasted-one-thing-u-did-wrong-is-u-added-daily-limit-on-every-c_1784804246733.txt  Pasted-this-is-my-django-app-that-i-created-with-so-many-featu_1784743907090.txt
installer/: Install-LeadManager4U.bat  Setup-GUI.ps1  Setup-LeadManager4U.ps1  Uninstall-LeadManager4U.bat  Uninstall-LeadManager4U.ps1  generate_icon.py
maps_scraper/: asgi.py  settings.py  urls.py  wsgi.py
scraper/: admin.py  ai_engine.py  auth_middleware.py  bing_maps_scraper.py  domains.py  email_sender.py  models.py  scraper.py  search_scraper.py  tests.py  views.py
staticfiles/: staticfiles.json
(+36 files in other folders)
