[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "django>=6.0.7",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "selenium>=4.46.0",
    "webdriver-manager>=4.1.2",
]
